--- a/styles/style.css
+++ b/styles/style.css
@@ -51,4 +51,30 @@ p {
   font-size: 16px;
   font-family: Sora, sans-serif;
   margin-bottom: 10px;
+}
+
+.avaliaty {
+  border: solid 1px blue;
+  width: 50%;
+  padding: 15px 15px;
+  background-color: #FFFFFF;
+  border-radius: 15px;
+}
+
+.logo-stars {
+  display: flex;
+  flex-direction: row;
+  border: solid 1px red;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.logo {
+  width: 40%;
+}
+
+.first-star {
+  margin-left: 10px;
+  fill: antiquewhite;
+  border: none;
 }/*# sourceMappingURL=style.css.map */
