--- a/styles/style.scss
+++ b/styles/style.scss
@@ -75,3 +75,29 @@ p{
     @include text-body2();
     margin-bottom: 10px;
 }
+
+.avaliaty{
+    border: solid 1px blue;
+    width: 50%;
+    padding: 15px 15px;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+}
+
+.logo-stars{
+    display: flex;
+    flex-direction: row;
+    border: solid 1px red; 
+    width: fit-content;
+      
+}
+
+.logo{
+    width: 40%;
+}
+
+.first-star{
+    margin-left: 10px;
+    fill: antiquewhite;
+    border: none;
+}
