--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,12 +9,13 @@
 
 @mixin text-body{
     font-size: 20px;
-    font-family: Sora, sans-serif; 
+    font-family: Sora, sans-serif;
+    
 }
 
 @mixin text-body2{
-    font-size: 16px;
-    font-family: Sora, sans-serif; 
+    font-size: 15px;
+    font-family: Sora, sans-serif;    
 }
 
 @mixin text-list-item{
@@ -72,32 +73,77 @@ p{
     display: block;
     line-height: 24px;
     margin-left: 10px;
-    @include text-body2();
+    @include text-list-item();
     margin-bottom: 10px;
 }
 
-.avaliaty{
-    border: solid 1px blue;
+.right-content{
+    
     width: 50%;
-    padding: 15px 15px;
+    padding: 0px 30px;    
+}
+
+.testimonial{    
+    width: 60%;    
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
     background-color: #FFFFFF;
     border-radius: 15px;
+    justify-content: left;
+    box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.05);
 }
 
 .logo-stars{
+    
+    height: 40%;
+    width: fit-content;
     display: flex;
     flex-direction: row;
-    border: solid 1px red; 
-    width: fit-content;
-      
+    align-items: center;
 }
 
 .logo{
-    width: 40%;
+    
+    width: fit-content;        
+    margin-right: 10px;
+    display: flex;
+    justify-content: left;
 }
 
-.first-star{
-    margin-left: 10px;
-    fill: antiquewhite;
-    border: none;
+.company-logo{
+    width: 85px;         
+}
+
+.stars{
+    width: fit-content;
+    height: 100%;    
+    display: flex;
+    flex-direction: row;
+}
+
+.avaliaty-star{
+    
+    height: fit-content;    
+    
+}
+
+.people-name{
+    @include text-body2();
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.testimonial-descriptions{
+    @include text-body2();
+}
+
+.testimonial-left{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;   
+}
+
+.testimonial-right{
+    margin-top: 25px;
 }
