--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 .left-content {
+  min-width: 50%;
   height: 50%;
   width: 50%;
 }
@@ -56,6 +57,7 @@ p {
 .right-content {
   width: 50%;
   padding: 0px 30px;
+  min-width: 50%;
 }
 
 .testimonial {
@@ -67,6 +69,7 @@ p {
   border-radius: 15px;
   justify-content: left;
   box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.05);
+  min-width: 300px;
 }
 
 .logo-stars {
@@ -91,11 +94,8 @@ p {
 }
 
 .stars {
-  width: -moz-fit-content;
-  width: fit-content;
   height: 100%;
   display: flex;
-  flex-direction: row;
 }
 
 .avaliaty-star {
@@ -123,4 +123,18 @@ p {
 
 .testimonial-right {
   margin-top: 25px;
+}
+
+@media (max-width: 750px) {
+  .main {
+    flex-direction: column;
+  }
+  .right-content {
+    margin-top: 30px;
+    padding: 0px;
+    width: 100%;
+  }
+  .left-content {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
